# fuckncm

./: .gitignore  CMakeLists.txt  addCov.cpp  addCover.c  addTags.cpp  base64.h  file.h  main.c  myfun.h  test.c  test.h  test2.c
otherFun/: base64.c
